Overflow issue in mobile screen fixed.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -157,6 +157,9 @@
         .cards {
           display: flex;
           overflow: hidden;
+          @media screen and (max-width: 768px) {
+            overflow: auto;
+          }
           gap: 2rem;
           .card {
             display: flex;
